--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -11,13 +11,14 @@
   &--inverted {
     background-color: #ffffff;
     border: 1px solid #0a597d;
-    color: #0a597d;
+    color: #7d9eb1;
   }
 
   @media (min-width: 760px) {
     &:hover,
     &:focus {
-      background-color: #1a6a8a;
+      box-shadow:
+        0 0 32px 0 rgba(0, 0, 0, 0.24);
     }
 
     &:active {
@@ -27,16 +28,13 @@
     &--inverted {
       &:hover,
       &:focus {
+        box-shadow: none;
         background-color: #ffffff;
-        border-color: #009aca;
-        color: #009aca;
+        color: #0a597d;
       }
 
       &:active {
-        color: #104a5e;
-        border-color: #104a5e;
-        box-shadow:
-          inset 0 0 10px 0 rgba(0, 90, 128, 0.4);
+        border-width: 2px;
       }
     }
   }
