--- a/source/sass/blocks/popular-products.scss
+++ b/source/sass/blocks/popular-products.scss
@@ -8,6 +8,7 @@
 
 .popular-products__content {
   @include mobile-content;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,6 +23,22 @@
 
   @media (min-width: 1170px) {
     @include desktop-content;
+    @include bg-lines;
+    position: relative;
+    @media (min-width: 1800px) {
+      z-index: 2;
+      &::after {
+        content: "";
+        position: absolute;
+        right: -340px;
+        top: 385px;
+        width: 465px;
+        height: 903px;
+        background-image: url("../img/total-desktop-bg-2.png");
+        background-repeat: no-repeat;
+        z-index: -1;
+      }
+    }
   }
 }
 
@@ -33,6 +50,8 @@
 
   @media (min-width: 1170px) {
     margin-right: auto;
+    text-shadow:
+      -10px 10px 0 rgba(40, 80, 169, 0.13);
   }
 }
 
