--- a/source/sass/blocks/banner.scss
+++ b/source/sass/blocks/banner.scss
@@ -1,6 +1,6 @@
 .banner {
   background-image: url("../img/banner-bg.jpg");
-  background-position: 50%;
+  background-position: 58% 0;
   background-color: #aad2e6;
   @media (min-width: 760px) {
     background-image: url("../img/banner-bg-desktop.jpg");
