--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -39,4 +39,11 @@
 @import "blocks/catalog-cards";
 @import "blocks/catalog-card";
 
+@import "blocks/contacts-table";
+
+@import "blocks/product-view";
+@import "blocks/product-delivery";
+@import "blocks/same-products";
+@import "blocks/same-product";
+
 @import "helpers";
