--- a/source/sass/blocks/category-switchers.scss
+++ b/source/sass/blocks/category-switchers.scss
@@ -1,4 +1,5 @@
 .category-switchers__button {
+  display: block;
   margin: 0 auto;
   margin-bottom: 7px;
   width: 290px;
@@ -7,6 +8,11 @@
   line-height: 23px;
   text-transform: uppercase;
   letter-spacing: 2px;
+
+  &.sticky {
+    position: fixed;
+    top: 50px;
+  }
 
   @media (min-width: 760px) {
     display: none;
