--- a/source/sass/blocks/popups.scss
+++ b/source/sass/blocks/popups.scss
@@ -18,11 +18,8 @@
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.15);
   z-index: 100;
-}
 
-.quick-view__overlay.js-show,
-.city__overlay.js-show,
-.callback__overlay.js-show,
-.auth__overlay.js-show {
-  display: flex;
+  &.js-show {
+    display: flex;
+  }
 }
