--- a/source/sass/blocks/product-delivery.scss
+++ b/source/sass/blocks/product-delivery.scss
@@ -24,6 +24,7 @@
 }
 
 .product-delivery__button {
+  position: relative;
   padding: 21px 36px;
 
   border: none;
@@ -33,11 +34,35 @@
   line-height: 17px;
   text-transform: uppercase;
   letter-spacing: 4.16px;
+  z-index: 1;
+  cursor: pointer;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 13px;
+    left: 0;
+    display: none;
+    width: 100%;
+    height: 33px;
+    background-color: #ffffff;
+    z-index: -1;
+  }
+
+  &.js-active {
+    color: #0a5a7e;
+    box-shadow:
+      inset 0 0 0 1px #3a748f;
+    font-weight: bold;
+
+    &::before {
+      display: block;
+    }
+  }
 
   &:hover,
   &:focus {
     color: #0a5a7e;
-    outline: 1px solid #095273;
   }
 
   &:active {
