--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,6 +26,7 @@
 @import "blocks/popup-callback";
 @import "blocks/popup-auth";
 @import "blocks/popup-quick-view";
+@import "blocks/popup-sizes";
 
 @import "blocks/breadcrumbs";
 @import "blocks/catalog";
@@ -45,5 +46,31 @@
 @import "blocks/product-delivery";
 @import "blocks/same-products";
 @import "blocks/same-product";
+
+@import "blocks/choose-color";
+@import "blocks/colors-variants";
+@import "blocks/cloth-variants";
+
+@import "blocks/choose-cloth";
+@import "blocks/cloth-selection";
+@import "blocks/cloth-card";
+
+@import "blocks/profile-buttons";
+@import "blocks/order-section";
+@import "blocks/order-card";
+
+@import "blocks/sizes-tables";
+
+@import "blocks/services";
+
+@import "blocks/to-wholesale-clients";
+
+@import "blocks/checkout";
+
+@import "blocks/news";
+
+@import "blocks/reviews";
+
+@import "blocks/text-article";
 
 @import "helpers";
